Fix multi displayer left spacing

--- a/packages/scss/src/components/multiSelect/index.scss
+++ b/packages/scss/src/components/multiSelect/index.scss
@@ -61,5 +61,9 @@
 		min-inline-size: 0;
 		display: flex;
 		gap: 0.5ch;
+
+		&:empty {
+			display: none;
+		}
 	}
 }
